<resources>
    <string name="app_name">MyKicks</string>
    <string name="profile_page">Profile</string>
    <string name="tb_back">Back</string>
    <string name="full_name">Thariq Z Satyagraha</string>
    <string name="email">thariqzs@yahoo.com</string>
    <string name="joined_since">12 Januari 2021</string>
    <string name="kick_name">Air Jordan Black</string>
    <string name="harga">Harga</string>
    <string name="warna">Warna</string>
    <string name="tanggal_beli">Tanggal Beli</string>
    <string name="deskripsi">Deskripsi</string>

    <string-array name="data_name">
        <item>Air Jordan 1</item>
        <item>Air Jordan 2</item>
        <item>Air Jordan 3</item>
        <item>Air Jordan 4</item>
        <item>Air Jordan 5</item>
        <item>Air Jordan 6</item>
        <item>Air Jordan 7</item>
        <item>Air Jordan 8</item>
        <item>Air Jordan 9</item>
        <item>Air Jordan 10</item>
        <item>Air Jordan 11</item>
        <item>Air Jordan 12</item>
    </string-array>
    <string-array name="data_color">
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Green</item>
        <item>Grey</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Sky</item>
        <item>Space</item>
        <item>Toy Story</item>
        <item>White</item>
    </string-array>
    <string-array name="data_date">
        <item>12 Januari 2010</item>
        <item>09 Mei 2011</item>
        <item>15 Oktober 2012</item>
        <item>10 Februari 2013</item>
        <item>23 Maret 2014</item>
        <item>27 Maret 2015</item>
        <item>09 Desember 2016</item>
        <item>08 Agustus 2017</item>
        <item>22 Juli 2018</item>
        <item>08 Mei 2019</item>
        <item>17 Maret 2020</item>
        <item>05 Februari 2021</item>
        <item>01 Januari 2022</item>
    </string-array>
    <string-array name="data_price">
        <item>Rp 1.200.000</item>
        <item>Rp 4.300.000</item>
        <item>Rp 3.299.000</item>
        <item>Rp 1.700.000</item>
        <item>Rp 2.499.000</item>
        <item>Rp 5.000.000</item>
        <item>Rp 1.299.000</item>
        <item>Rp 1.700.000</item>
        <item>Rp 999.000</item>
        <item>Rp 4.999.000</item>
        <item>Rp 3.659.000</item>
        <item>Rp 2.000.000</item>
    </string-array>
    <string-array name="data_photo">
        <item>@drawable/jordan_black</item>
        <item>@drawable/jordan_blue</item>
        <item>@drawable/jordan_brown</item>
        <item>@drawable/jordan_green</item>
        <item>@drawable/jordan_grey</item>
        <item>@drawable/jordan_pink</item>
        <item>@drawable/jordan_purple</item>
        <item>@drawable/jordan_red</item>
        <item>@drawable/jordan_sky</item>
        <item>@drawable/jordan_space</item>
        <item>@drawable/jordan_toy_story</item>
        <item>@drawable/jordan_white</item>
    </string-array>
    <string-array name="data_description">
        <item>The Air Jordan 1 Retro Concord is an iconic sneaker that lives up to its reputation. The patent leather on the upper is of great quality and gives the shoe a sleek look. The fit is true to size and the cushioning is comfortable for all day wear. The traction on the sole is impressive and allows for great grip on the court. Overall, this shoe is a must-have for any Air Jordan collector or basketball player</item>
        <item>The Air Jordan 2 Retro Bred is a classic sneaker that has stood the test of time. The black and red colorway is iconic and the leather upper is of great quality. The fit is snug but comfortable and the cushioning is perfect for all day wear. The traction on the sole is impressive and allows for great grip on the court. I would definitely recommend this shoe to any Air Jordan fan or basketball player</item>
        <item>The Air Jordan 3 Retro Fire Red is a stylish and comfortable sneaker that is perfect for everyday wear. The leather upper is of great quality and the red accents add a pop of color to the shoe. The fit is true to size and the cushioning is comfortable for all day wear. The traction on the sole is impressive and allows for great grip on the court. Overall, this shoe is a great addition to any Air Jordan fans collection</item>
        <item>The Air Jordan 4 Retro Infrared is a classic sneaker that has stood the test of time. The black and red colorway is iconic and the leather upper is of great quality. The fit is true to size and the cushioning is comfortable for all day wear. The traction on the sole is impressive and allows for great grip on the court. I would definitely recommend this shoe to any Air Jordan fan or basketball player</item>
        <item>The Air Jordan 5 Retro Bordeaux is a stylish and unique sneaker that stands out from the crowd. The black and burgundy colorway is bold and the leather upper is of great quality. The fit is snug but comfortable and the cushioning is perfect for all day wear. The traction on the sole is impressive and allows for great grip on the court. Overall, this shoe is a great addition to any Air Jordan fans collection</item>
        <item>The Air Jordan 6 Retro Aqua is a stylish and comfortable sneaker that is perfect for everyday wear. The black and aqua colorway is bold and the leather upper is of great quality. The fit is true to size and the cushioning is comfortable for all day wear. The traction on the sole is impressive and allows for great grip on the court. Overall, this shoe is a great addition to any Air Jordan fans collection</item>
        <item>The Air Jordan 7 Retro Bred is a sleek and stylish sneaker that is perfect for both casual wear and basketball. The black and red colorway is classic and the leather upper is of great quality. The fit is true to size and the cushioning is comfortable for all-day wear. The traction on the sole is impressive and allows for great grip on the court. Overall, this shoe is a must have for any Air Jordan fan or basketball player</item>
        <item>The Air Jordan 8 Retro Chicago is a classic sneaker that has stood the test of time. The white and red colorway is iconic and the leather upper is of great quality. The fit is true to size and the cushioning is comfortable for all-day wear. The traction on the sole is impressive and allows for great grip on the court. I would definitely recommend this shoe to any Air Jordan fan or basketball player</item>
        <item>The Air Jordan 9 Retro Flu Game is a legendary sneaker that is synonymous with Michael Jordan historic performance in the 1997 NBA Finals. The black and red colorway is iconic and the leather upper is of great quality. The fit is true to size and the cushioning is comfortable for all day wear. The traction on the sole is impressive and allows for great grip on the court. Overall, this shoe is a must have for any Air Jordan fan or basketball player</item>
        <item>The Air Jordan 10 Retro He Got Game is a classic sneaker that is perfect for both casual wear and basketball. The white and black colorway is clean and the leather upper is of great quality. The fit is snug but comfortable and the cushioning is perfect for all day wear. The traction on the sole is impressive and allows for great grip on the court. Overall, this shoe is a great addition to any Air Jordan fans collection</item>
        <item>The Air Jordan 11 Retro Last Shot is a legendary sneaker that is synonymous with Michael Jordan iconic shot in the 1998 NBA Finals. The black and red colorway is bold and the leather upper is of great quality. The fit is snug but comfortable and the cushioning is perfect for all day wear. The traction on the sole is impressive and allows for great grip on the court. I would definitely recommend this shoe to any Air Jordan fan or basketball player</item>
        <item>The Air Jordan 12, Ive been a fan of the Air Jordan line for years, and this latest release did not disappoint. The Shattered Backboard colorway is a perfect addition to my collection. The leather upper is of great quality and the orange and black colorway pops in a unique way. The fit is snug but comfortable and the traction on the sole is impressive. I would definitely recommend this shoe to any Air Jordan fan looking for a bold and stylish addition to their collection</item>
    </string-array>
</resources>