<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/color_3"
        android:elevation="12dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView android:src="@drawable/ic_chevron_left" android:layout_width="14dp" android:layout_height="16dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/tb_back"
            android:textColor="@color/color_2"
            android:textSize="16dp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/profile_img"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <ImageButton
        android:id="@+id/ic_linkedin"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_linkedin"
        tools:layout_editor_absoluteX="314dp"
        tools:layout_editor_absoluteY="142dp" />

    <ImageButton
        android:id="@+id/ic_instagram"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_instagram"
        tools:layout_editor_absoluteX="314dp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="ic_linkedin,ic_instagram"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_full_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/joined_since"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>